54_dms_serverless/cloudformation/mysql_account_vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: cm-kasama-dev-vpc, private subnets, RDS subnet group, and RDS security group

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.16.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cm-kasama-dev-vpc

  SubnetPrivate1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.16.1.0/24
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: cm-kasama-dev-subnet-private1-ap-northeast-1a

  SubnetPrivate2C:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.16.2.0/24
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: cm-kasama-dev-subnet-private2-ap-northeast-1c

  RouteTablePrivate1A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cm-kasama-dev-rtb-private1-ap-northeast-1a

  RouteTablePrivate2C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cm-kasama-dev-rtb-private2-ap-northeast-1c

  SubnetRouteTableAssoc1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPrivate1A
      RouteTableId: !Ref RouteTablePrivate1A

  SubnetRouteTableAssoc2C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPrivate2C
      RouteTableId: !Ref RouteTablePrivate2C

  RDSMySQLSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: rds-mysql-sg
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 172.16.0.0/16
          Description: Allow DMS Serverless
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref CloudShellRDSAccessSG
          Description: Allow MySQL traffic from CloudShell VPC Environment
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
      Tags:
        - Key: Name
          Value: rds-mysql-sg

  CloudShellRDSAccessSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: cloudshell-rds-access-sg
      VpcId: !Ref VPC
      # インバウンドルールなし
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
      Tags:
        - Key: Name
          Value: cloudshell-rds-access-sg

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS MySQL
      SubnetIds:
        - !Ref SubnetPrivate1A
        - !Ref SubnetPrivate2C
      DBSubnetGroupName: cm-kasama-mysql-subnet-group

Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: cm-kasama-vpc-id

  SubnetPrivate1AId:
    Value: !Ref SubnetPrivate1A
    Export:
      Name: cm-kasama-subnet-private1a-id

  SubnetPrivate2CId:
    Value: !Ref SubnetPrivate2C
    Export:
      Name: cm-kasama-subnet-private2c-id

  RDSMySQLSGId:
    Value: !Ref RDSMySQLSG
    Export:
      Name: cm-kasama-rds-mysql-sg-id

  RDSSubnetGroupName:
    Value: !Ref RDSSubnetGroup
    Export:
      Name: cm-kasama-rds-subnet-group-name
